Modify resource paths and add start button
Updated file paths for CSS and JS resources and added a start button.

--- a/sudoku.html
+++ b/sudoku.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nature Sudoku</title>
-    <link rel="stylesheet" href="sudoku.css">
-    <script src="sudoku.js" defer></script>
+    <link rel="stylesheet" href="css/sudoku.css">
+    <script src="js/sudoku.js" defer></script>
 </head>
 
 <body>
@@ -15,6 +15,9 @@
         <div class="stats-bar">
             <div class="stat-item">Score: <span id="score">0</span></div>
             <div class="stat-item">Time: <span id="timer">00:00</span></div>
+        </div>
+        <div class="start-section">
+            <button id="startBtn">Start Game</button>
         </div>
         <div class="controls">
             <button id="pauseBtn" aria-label="Pause"></button>
