Review - 1.. Files Organised.. Completed Chess/Sudoku/Reversi

--- a/sudoku.html
+++ b/sudoku.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="container">
+        <a href="index.html" class="home-btn">← Home</a>
         <h1>🌿 Sudoku</h1>
 
         <div class="stats-bar">
